--- a/boot/Makefile
+++ b/boot/Makefile
@@ -7,7 +7,7 @@ LD = ld
 OBJCOPY = objcopy
 
 # target
-all: boot.image
+all: boot.image head.image
 
 # implicit rules
 %o:%s
@@ -17,6 +17,10 @@ all: boot.image
 boot.image: boot.o
 	$(LD) -Ttext 0x00 -o boot.bin boot.o
 	$(OBJCOPY) -O binary boot.bin boot.image
+# rules
+head.image: head.o
+	$(LD) -Ttext 0x00 -o head.bin head.o
+	$(OBJCOPY) -O binary head.bin head.image
 
 clean:
-	rm -f boot.o boot.bin boot.image
+	rm -f *.o *.bin *.image
